--- a/rusts_algo/Cargo.toml
+++ b/rusts_algo/Cargo.toml
@@ -10,3 +10,4 @@ hmap = "0.1.0"
 anyhow = "1.0.13"
 clap = { version = "3.1.18", features = ["derive"] }
 multiarray = "0.1.3"
+derive_more = "0.99.17"
