--- a/rusts_algo/Cargo.toml
+++ b/rusts_algo/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "3.1.18", features = ["derive"] }
 multiarray = "0.1.3"
 derive_more = "0.99.17"
 num = "0.4.0"
+num_cpus = "1.13.1"
