--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-    - run: |
-      cd algo
-      cargo build --verbose
+      run: |
+        cd algo
+        cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
