--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build
       run: |
         ls -al
-        cd algo
+        cd rusts_algo
         cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
