--- a/rusts_algo/Cargo.toml
+++ b/rusts_algo/Cargo.toml
@@ -10,6 +10,7 @@ hmap = "0.1.0"
 anyhow = "1.0.13"
 clap = { version = "3.1.18", features = ["derive"] }
 float-cmp = "0.9.0"
+regex = "1.7.0"
 multiarray = "0.1.3"
 derive_more = "0.99.17"
 ndarray = "0.15.6"
