--- a/rusts_algo/Cargo.toml
+++ b/rusts_algo/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hmap = "0.1.0"
 anyhow = "1.0.69"
 clap = { version = "3.1.18", features = ["derive"] }
+crossbeam = "0.8.2"
 float-cmp = "0.9.0"
 hashmap_macro = "0.1.0"
+hmap = "0.1.0"
 regex = "1.7.0"
 multiarray = "0.1.3"
 derive_more = "0.99.17"
@@ -20,4 +21,5 @@ num_cpus = "1.13.1"
 predicates = "2.1.5"
 rand = "0.8.5"
 rust_decimal = "1.28.1"
-crossbeam = "0.8.2"
+trie-rs = "0.1.1"
+
